cambio de eje 2-b + todo ejercicio 2-c

--- a/2-b/index.html
+++ b/2-b/index.html
@@ -12,6 +12,7 @@
         <div id="div3" class="div"></div>
         <div id="div4" class="div"></div>
         <div id="div5" class="div"></div>
+        <div class="clear-fix"></div>
 
     </div>
 </body>
