Arreglo de ejercicio

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -35,19 +35,7 @@
     <h3>Ejercicio 7</h3>
     <p>Muestra valor NaN (Not a Number) porque sumas undefined (numero1) mas 5 (numero2)</p>
     <h3>Ejercicio 9</h3>
-        <h4>a.</h4>
-        <ul>
-            <li>!true // Devuelve false</li>
-            <li>!false // Devuelve true</li>
-            <li>true || true // Devuelve true</li>
-            <li>true || false // Devuelve true</li>
-            <li>false || true // Devuelve true</li>
-            <li>false || false // Devuelve false</li>
-            <li>true && true // Devuelve true</li>
-            <li>true && false // Devuelve false</li>
-            <li>false && true // Devuelve false</li>
-            <li>false && false // Devuelve false</li>
-        </ul>
+        <h4>a en consola</h4>
         <h4>b en consola</h4>
         <h4>c en consola</h4>
 </body>
